--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title>Responsive NFT website</title>
+        <title>NFTs</title>
     </head>
     <body>
         <!--==================== HEADER ====================-->
